--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                             if(ev.which == 32){
                                 velY += 4;
                                 fly = true
-                              sphere.position = BABYLON.Vector3.Lerp(sphere.position, new BABYLON.Vector3(0, 150, 0), .05)
+                              sphere.position = BABYLON.Vector3.Lerp(sphere.position, new BABYLON.Vector3(0, 150, 0), .02)
                             }
                         })
                         document.addEventListener("keyup", function (ev) {
@@ -627,7 +627,7 @@
                                 fly = false
                                  scene.registerBeforeRender(function(){
                                      if(!fly){
-                                sphere.position = BABYLON.Vector3.Lerp(sphere.position, new BABYLON.Vector3(sphere.position.x, 33, sphere.position.z), .05)
+                                sphere.position = BABYLON.Vector3.Lerp(sphere.position, new BABYLON.Vector3(sphere.position.x, 33, sphere.position.z), .02)
                                      }
                                  })
                             }
@@ -636,8 +636,8 @@
                          scene.registerBeforeRender(function(){
                             sphere.rotation.y = rotY;
                             sphere.locallyTranslate(new BABYLON.Vector3(0, 0, velocity))
-                            //camera.target.x = sphere.position.x
-                            //camera.target.z = sphere.position.z
+                            camera.target.x = sphere.position.x
+                            camera.target.z = sphere.position.z
                             camera.target.y = sphere.position.y+5
                         });
                         
