--- a/index.html
+++ b/index.html
@@ -368,8 +368,14 @@
                         //sphere instance to ease camera tracking
                         var sphere = new BABYLON.Mesh.CreateBox("sp", 4, scene);
                         sphere.scaling.y = 4
-                        sphere.visibility = 0.5;
+                        sphere.visibility = 0;
                         sphere.position.y = 34
+                        
+                        var boundingbox = new BABYLON.Mesh.CreateBox("sp", 4, scene);
+                        boundingbox.scaling.y = 4;
+                        boundingbox.checkCollisions = true
+                        boundingbox.visibility = 0.5;
+                        boundingbox.position.y = 34
                         //spawn the players
                         //spawn the players
                         var createCyberMetro = function (id) {
@@ -637,14 +643,15 @@
                          scene.registerBeforeRender(function(){
                             sphere.rotation.y = rotY;
                             sphere.locallyTranslate(new BABYLON.Vector3(0, 0, velocity))
-                            camera.target.x = sphere.position.x
-                            camera.target.z = sphere.position.z
-                            camera.target.y = sphere.position.y+5
+                            boundingbox.moveWithCollisions(sphere.absolutePosition)
+                            camera.target.x = boundingbox.position.x
+                            camera.target.z = boundingbox.position.z
+                            camera.target.y = boundingbox.position.y+5
                         });
                         
                         //send the sphere position to other clients
                          setInterval(function(){
-                            socket.emit("getPosition", sphere.getAbsolutePosition())
+                            socket.emit("getPosition", boundingbox.getAbsolutePosition())
                         }, 1000/80);
                     }
                     return scene;
