--- a/index.html
+++ b/index.html
@@ -366,9 +366,7 @@
                         spawnpoint2.position.set(1.3491115696702272, 44, -64.65881072193218)
                         spawnpoint2.rotation.y = Math.PI
                         //sphere instance to ease camera tracking
-                        var sphere = new BABYLON.Mesh.CreateBox("sp", 4, scene);
-                        sphere.scaling.y = 4
-                        sphere.visibility = 0;
+                        var sphere = new BABYLON.Mesh("m", scene); //empty mesh       
                         sphere.position.y = 34
                         
                         var boundingbox = new BABYLON.Mesh.CreateBox("sp", 4, scene);
