--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                             }
                         })
 var psdmesh = new BABYLON.Mesh("m", scene)
-var alpha = -.05
+var alpha = 0
                          scene.registerBeforeRender(function(){
                             sphere.rotation.y = rotY;
                             sphere.locallyTranslate(new BABYLON.Vector3(0, 0, velocity))
