--- a/index.html
+++ b/index.html
@@ -643,6 +643,8 @@
 
                          scene.registerBeforeRender(function(){
                             sphere.rotation.y = rotY;
+                            psdmesh.rotation.y = rotY;
+                             
                             sphere.locallyTranslate(new BABYLON.Vector3(0, 0, velocity))
                              
                              psdmesh.locallyTranslate(new BABYLON.Vector3(0, 0, alpha));
