--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                         })
 
 
-                        var psdmesh = new BABYLON.Mesh("m", scene)
+                        var psdmesh = BABYLON.Mesh.CreateSphere("sphere1", 16, 2, scene);
                         var alpha = 0
                         var velocity = 0
                         var velY = 0;
