--- a/index.html
+++ b/index.html
@@ -331,12 +331,12 @@
 
                         var subCSG = bCSG.subtract(aCSG);
                         var base3 = subCSG.toMesh("csg2", mat, scene);
-                       // base3.checkCollisions = true
+                        base3.checkCollisions = true
                         base3.scaling.set(4, 4, 4);
                         base3.material = wallmat
                         scene.removeMesh(box);
                         scene.removeMesh(polygon);
-                       //  base2.checkCollisions = true
+                         base2.checkCollisions = true
                         var createSpawnPoint = function () {
                             var box = new BABYLON.Mesh.CreateBox("b", 1.3, scene)
                             box.position.z = -.5
@@ -641,7 +641,7 @@
                             }
                         })
 
-var VitessePerso = 5, forward, backwards;
+var VitessePerso = 2, forward, backwards;
                          scene.registerBeforeRender(function(){
                             sphere.rotation.y = rotY;
                             psdmesh.rotation.y = rotY;
