--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     var floor = new BABYLON.Mesh.CreateGround("floor", 6, 6, 2, scene)
                     floor.position.y = 34
                     floor.scaling.set(37, 4, 37)
-                    floor.checkCollisions = true;
+                   // floor.checkCollisions = true;
                     floor.material = floormat
 
                     var polygon2 = BABYLON.MeshBuilder.CreatePolyhedron("nm", {
